# AI-Bug-Severity-Predictor

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  mlflow.db  render.yaml  render.yml  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  app.py  predict.py  predict_rf.py  predict_xgb.py  pyproject.toml  requirements.txt  test_models.py
backend/k8s/: backend.yml
docs/: architecture.md  dataset_reasearch.md
frontend/: Dockerfile  api.py  app.py  config.py  predict.py  predict_rf.py  predict_xgb.py  pyproject.toml  requirements.txt  utils.py
frontend/Scripts/: generate_samples.py
frontend/data/: sample_bugs.csv
frontend/k8s/: frontend.yml
frontend/styles/: custom.css
k8s/: backend.yml  frontend.yml
ml/notebooks/: 01_Data_Collection.ipynb  01_EDA.ipynb  02_EDA.ipynb  02_Preprocessing.ipynb  03_Preprocessing.ipynb  04_Feature_Engineering.ipynb  05_Model_Training.ipynb  06_BERT_Model.ipynb  07_Model_Evaluation.ipynb  label_encoder.pkl  mlflow.db  mlflow_tracking.ipynb
ml/notebooks/test_dataset/: data-00000-of-00001.arrow  state.json
ml/notebooks/train_dataset/: data-00000-of-00001.arrow  state.json
mlruns/0/: meta.yaml
mlruns/0/0fd21810072b4257bb82bb23604606fc/: meta.yaml
mlruns/0/7cf89548137e443a90e37846b52fd411/: meta.yaml
mlruns/798757603394253418/: meta.yaml
models/: label_encoder.pkl  random_forest.pkl  tfidf_vectorizer.pkl  xgboost.pkl
models/bert_model/: config.json  model.safetensors
monitoring/prometheus/: prometheus.yml
results/: model_comparison.csv
(+51 files in other folders)
