[project]
name = "bugsight-frontend"
version = "1.0.0"
description = "BugSight AI - Frontend Dashboard"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.37.0",
    "pandas>=2.2.0",
    "torch>=2.4.0",
    "transformers>=4.44.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "joblib>=1.4.0",
    "sentencepiece>=0.2.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.24.0",
    "requests>=2.32.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = []
